k8s/whispr/preprod/media-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: media-service
  namespace: whispr-preprod
spec:
  type: NodePort
  selector:
    app: media-service
  ports:
    - name: http
      port: 3012
      targetPort: 3012
      nodePort: 30112
    - name: grpc
      port: 50012
      targetPort: 50012
